--- a/src/main/webapp/wise5/vle/themes/default/style/sass/material/_custom.scss
+++ b/src/main/webapp/wise5/vle/themes/default/style/sass/material/_custom.scss
@@ -71,10 +71,10 @@ md-progress-linear:not([md-mode="indeterminate"]) {
   }
 }
 
-md-list-item .md-list-item-inner {
+md-list-item .md-list-item-inner p {
   line-height: 1.6rem;
 
-  p > md-icon {
+  md-icon {
     vertical-align: top;
   }
 }
